--- a/public/events/001.md
+++ b/public/events/001.md
@@ -1,25 +1,20 @@
-# MSMC Transport Carrier // 2.21.5014u
-The squad finally met each other en-route to the recently-rediscovered planetoid known as **HERCYNIA**. Guided by MSMC Commanding Officer **SNAKEMAN**, Squad **DELTA-ECHO-ECHO-ZULU** was given a rudimentary team-building exercise known as Virtual Training. 
+# Moon Mideel // 1.23.5014u
+Newly recruited LANCER pilots **CHOPIN**, **CLEM**, **CROSS** and **SHERIFF** were all assigned to research station Cypress on the moon of Mideel, orbiting a non-habitable planet in the Mako system. Mideel is of particular interest as it once had tectonic activity which suddenly ceased. Despite this, the moon still has a spinning molten core and magnetic field.
 
-**COMPADRE** reached for his antique relic of a firearm and started twirling it flawlessly. While this was happening, **KAL** attempted to tap into the virtual training's mainframe in order to give her team an advantage - this backfired spectacularly, as **SNAKEMAN** was watching her with his one good eye instead of watching the showmanship **COMPADRE** was putting on.
+Of particular note, the research scientists of the Marin Collective, the research org hired by Serys Co discovered a material dubbed **DEEPGLASS**. **DEEPGLASS** is an incredibly dense and resilient crystalline substance that could have commercial uses ranging from data storage to starship engines.
 
-After witnessing **KAL** incorrectly guess his administrator password a couple of times, **SNAKEMAN** blankly states that if **KAL** wanted a challenge, all they had to do was ask. Because of this, the squad was pushed to the brink in what was supposed to be a confidence booster.
+Research Station Cypress was suddenly attacked from below - an earthquake of extraordinary magnitude caused a chasm to form spanning the length of the station. From beneath, spider like entities, seemingly made of rock and magma skittered up and started ravaging the station, including the scientists.
 
-After the exercise, **SNAKEMAN** rests his cane against his body and starts applauding their efforts. He mentions that there will be more training coming up, so get used to it and enjoy the commodities on the ship while they still can - there's no knowing how civilized this new planet is. 
+The squad's commander, **CAPTAIN MARTIN "CRUSHER" LYNGE"** was killed in the initial strike by a boulder flung from a gigantic monstrosity. Showing initiative, Pilot **CROSS** lead the squad in search of a way to reach the mech hanger. Now suited up, the remains of Crusher's Cobalt sheltered scientists while Pilot **SHERIFF** escorted a researcher to obtain a backup of all of the research data etched into a chunk of **DEEPGLASS**. Many of the scientists who survived the initial attack were regrettably killed by friendly fire.
 
-# MSMC Transport Carrier // 3.01.5014u
+The squad fled into the jungle. At 0744 local time, the squad managed to contact Nest station, the staging and resupply post in geosynhcronous orbit above the nearby planet. They were fed rendezvous coordinates on the other side of the moon and informed that there was hostile mech presence on the moon. Shortly before the rendezvous, the squad engaged and eliminated a small mech strike force registered to pilots from the **MIRRORSMOKE MERCENARY COMPANY**, in employ of one of the Marin Collective's competitors.
 
-After a week's worth of what could only be described as hell-on-cradle, the squad begins to properly gel together - if only a tiny bit. **SNAKEMAN** assembles the squad for their last briefing under his wing. He mentions that he really didn't give them an honest rundown of the current mission, and sends them the initial tasking packet to their slates. He also mentions that the **MSMC** are subcontracted from **UNION**, so the operation is under finer scrutiny than usual.
+# SeCo Transport Frigate Euphrates // 1.24.5014u
 
-1. Union’s imperative dictates that the squad treat the situation with utmost care. Hercynia is potentially populated by some sort of indigenous human culture, but the evidence is unclear.
-2. The current holder of Hercynia’s charter is Landmark Colonial, a subsidiary of SmithShimano Corpro. The Squad is to make contact with Landmark’s representative on the ground first in order to present their credentials and integrate into the local hierarchy.
-3. Hercynia was once subject to a widespread and catastrophic SecComm expeditionary campaign. The records lack detail, but building from what has been recovered from the old Union Colonial Mission indicates that the Second Committee mounted a handful of similar campaigns against resistant populations. This likely accounts for the massive amount of radiation, distress signals, encrypted comms, and general “noise” coming off the world. The squad should expect to encounter old Union military infrastructure in the form of unexploded ordinance, waste radiation, and possibly even abandoned ground-based installations.
+Nearly 24 hours after the squad was rescued from the surface of Mideel, they underwent a thorough debrief from **COMMANDER ILYUKHINA PETROVA** regarding the events of the attack on Research Station Cypress. The debrief is more strenuous on some than others.
 
- **SNAKEMAN** mentions that it's now time for the squad to depart on a smaller transport craft, and to ensure ~~a larger profit~~ the squad's safety, they'll be under stasis while in transit.
-# MSMC Shuttle Carrier // 3.18.5014u
+The four pilots are reorganized into **ANVIL SQUAD**. There is no formal squad leader designation. The Pilots are instructed in no uncertain terms that they are to work together until Internal Affairs deems a reoganization necessary. The squad's license levels are upgraded, and they are dismissed to the hanger of the Euphrates to make any modifications to their mechs. As Lancers working for Internal Affairs, they have mostly free roam of the maintenance hangar, its onboard printers and materials, and the crew decks.
 
-As the squad awake from their month-long stasis and set their sights on the planet known as **HERCYNIA**, the drop carrier's captain notifies them to suit up - and make sure to borrow some EVA gear if they don't have any. Time is of the essence, and time is money. The squad straps into one of a few dropships, and preps for the descent.
+# SeCo Transport Frigate Euphrates // 1.27.5014u
 
-As they approach the world, their ship’s SIGINT deck reports that Hercynia is throwing off an incredible amount of noise – likely because it is a post-collapse SecComm “punching bag” world littered with old, decaying military infrastructure, and ruins – and they find themselves unable to get clear signals. All of this matches the thin profile pushed to them by local flightcomm. Unfortunately, optics are shot as well. Hercynia appears to be socked in under a planetwide monsoon season, blanketing all but the most extreme poles with thick cloud cover.
-
-The squad lands safely, dismounts from the shuttle, and begins assembling their gear as a small group approaches the shuttle. The group introduces themselves as a militia, with **BRAVA HADURA** as their Commander. She quickly informs them to get moving – and stay low, as there's a sniper in the area. The shuttle then begins its automated launch sequence, only to return a year from now.
+**ANVIL SQUAD** is inturrupted in their shipboard work and assembled for a mission briefing. Things are about to get interesting...
